@@ -95,6 +95,7 @@ class movie_base extends mdb_base {
    $this->main_runtime = "";
    $this->main_movietype = "";
    $this->main_title = "";
+   $this->original_title = "";
    $this->main_votes = -1;
    $this->main_year = -1;
    $this->main_endyear = -1;
